# rcg

backend/: README.md  ai_assist.py  main.py  pyproject.toml  requirements.txt  storage.py
rc/: .env  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
rc/components/: CampaignInput.tsx  CampaignPreview.tsx  DeploymentView.tsx  LandingPageFullView.tsx  LibraryView.tsx  Loader.tsx  PublicLandingPageViewer.tsx
rc/components/icons/: BeakerIcon.tsx  ClipboardIcon.tsx
rc/services/: geminiService.ts  videoService.ts
